Fixed header extra space with border-box

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,11 @@
 .header {
+  box-sizing: border-box;
   height: 100vh;
   padding-top: 25px;
 
   background-image: url("../images/header-image.png");
   background-size: cover;
-  background-position: center;
+  background-position-y: center;
 
   &__top-container {
     display: flex;
@@ -16,7 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 129px;
+    margin-top: 130px;
     font-size: 40px;
     line-height: 100%;
     text-align: center;
@@ -24,13 +25,13 @@
     color: #fff;
 
     @include onTablet {
-      margin-top: 141px;
+      margin-top: 140px;
       font-size: 64px;
       line-height: 64px;
     }
 
     @include onDesktop {
-      margin-top: 83px;
+      margin-top: 80px;
       font-size: 80px;
       line-height: 80px;
     }
